[tool.poetry]
name = "atmacup-5"
version = "0.1.0"
description = ""
authors = ["Amane Suzuki <amane.suzu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.4"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
scikit-learn = "^0.23.1"
torch = "^1.5.0"
catalyst = "^20.6"
nyaggle = "^0.1.3"
mlflow = "^1.8.0"
optuna = "^1.5.0"
scipy = "^1.4.1"
lightgbm = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
